--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     ],
     "routes":[
         {
-            "src": "./*",
+            "src": "./login*",
             "dest": "index.js"
         }
     ]
