--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
-    "builds":[
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }  
-    ],
-    "routes":[
-        {
-            "src": "./*",
-            "dest": "index.js" 
-        }
+    "version": 2,
+    "public": true,
+    "outputDirectory": "build", 
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
     ]
-}
+  }
+  
