--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
-    "version": 2,
-    "public": true,
-    "outputDirectory": "build", 
-    "rewrites": [
+    "builds": [
       {
-        "source": "/(.*)",
-        "destination": "/index.html"
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/index.js"
       }
     ]
   }
