--- a/ams/package.json
+++ b/ams/package.json
@@ -19,6 +19,7 @@
     "json": "^11.0.0",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.399.0",
+    "project1": "file:",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
